manifests/base/resources/licenses/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9200"
    prometheus.io/scrape: "true"
  labels:
    app: licenses
    chart: licenses-1.19.0
    heritage: Helm
    release: licenses
  name: licenses
spec:
  ports:
  - name: licenses
    port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    app: licenses
    release: licenses
  type: ClusterIP
---
