manifests/base/resources/licenses/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://licenses-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
  labels:
    app: licenses
    chart: licenses-1.19.0
    heritage: Helm
    release: licenses
  name: licenses
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: licenses
          servicePort: 9200
        path: /api/v1/licenses
---
